<?xml version="1.0"?>
<package format="3">
  <name>wheeltec_clean_nav</name>
  <version>0.1.0</version>
  <description>Clean Nav2 and AMCL integration for the Wheeltec mini Ackermann robot.</description>
  <maintainer email="2215873441@qq.com">Zongjue Liu</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>lslidar_driver</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turn_on_wheeltec_robot</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
